testsuite/tests/th/T17820c.stderr
T17820c.hs:8:18: error: [GHC-28914]
    Level error: ‘meth’ is used at level -1 but it is bound at level 0

